--- a/PillingTime1024/PillingTime/Base.lproj/Main.storyboard
+++ b/PillingTime1024/PillingTime/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xmi-4M-cY8">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,81 +25,157 @@
                                     <!--2018-01-24 07:00:45 +0000-->
                                 </date>
                             </datePicker>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="OyW-dw-GDl">
+                                <rect key="frame" x="16" y="358" width="343" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="월"/>
+                                    <segment title="화"/>
+                                    <segment title="수"/>
+                                    <segment title="목"/>
+                                    <segment title="금"/>
+                                    <segment title="토"/>
+                                    <segment title="일"/>
+                                </segments>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i5D-io-JIT">
+                                <rect key="frame" x="164" y="447" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="등록"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="JFJ-GV-sUH"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="등록" id="9HP-Dn-JK6"/>
+                    <navigationItem key="navigationItem" id="jIG-dT-tcn"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kfP-91-GJw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1109.5999999999999" y="373.76311844077964"/>
+            <point key="canvasLocation" x="1671" y="267"/>
+        </scene>
+        <!--Pill Table View Controller-->
+        <scene sceneID="EoR-mg-Qnb">
+            <objects>
+                <tableViewController id="36z-ZT-Bei" customClass="PillTableViewController" customModule="PillingTime" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="h5d-cp-raI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Pill" id="gNS-Ps-qXw">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gNS-Ps-qXw" id="TRo-nd-QYQ">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Pill2" rowHeight="145" id="NC1-BZ-tF1">
+                                <rect key="frame" x="0.0" y="72" width="375" height="145"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NC1-BZ-tF1" id="sPc-hT-FvS">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="144.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="36z-ZT-Bei" id="NBg-gr-RFc"/>
+                            <outlet property="delegate" destination="36z-ZT-Bei" id="gZg-Zc-pNE"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="GsI-P1-DYi"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yus-xJ-dhp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1669.5999999999999" y="1102.3988005997003"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="sd5-jx-qc3">
+            <objects>
+                <navigationController id="CpE-XO-o8l" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="dsW-zy-3Hp"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EeL-FT-RJf">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="TCK-bN-5lF" kind="relationship" relationship="rootViewController" id="98r-En-XGd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="buh-j0-qhN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="632.79999999999995" y="-429.53523238380814"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="DoH-Pk-6dw">
+        <scene sceneID="Tl4-7A-73L">
             <objects>
-                <viewController id="Mvc-j4-xvX" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Sf2-pA-jbe">
+                <viewController id="TCK-bN-5lF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KLR-1E-xLg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="uU3-hl-Tgf"/>
+                        <viewLayoutGuide key="safeArea" id="ZmO-vA-xXW"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Vv6-UJ-PgD"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gbg-fu-5k9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yP3-XF-cwC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-606" y="793"/>
+            <point key="canvasLocation" x="1639" y="-520"/>
         </scene>
-        <!--기록-->
-        <scene sceneID="4CQ-Io-ReG">
+        <!--Item-->
+        <scene sceneID="iWK-Bn-BjR">
             <objects>
-                <viewController id="m2e-zQ-Ieh" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="JYa-Zg-exF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="fxT-d1-Jfd"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="기록" id="qaI-Ye-W2E"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tKo-qG-toS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="byS-1b-LPT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="5ca-Ep-ebC"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="t8E-43-jvg">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="inb-aY-ng8" kind="relationship" relationship="rootViewController" id="aMm-Th-0dQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kT8-Qy-uqx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="288.80000000000001" y="899.10044977511257"/>
+            <point key="canvasLocation" x="632.79999999999995" y="293.70314842578711"/>
         </scene>
-        <!--메인-->
-        <scene sceneID="x2i-Py-5Wj">
+        <!--Item-->
+        <scene sceneID="tKZ-QZ-TuD">
             <objects>
-                <viewController id="fTS-qv-Cj6" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Aoe-2y-aPi">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="lTl-j8-3Uc"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="메인" id="rOq-LI-IW4"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Zze-rY-HDf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="acJ-uo-ywJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bcY-uE-TMc"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4H0-K5-Agu">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="36z-ZT-Bei" kind="relationship" relationship="rootViewController" id="dna-nv-w6d"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b08-nP-C5K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1109.5999999999999" y="-311.69415292353824"/>
+            <point key="canvasLocation" x="632.79999999999995" y="1103.2983508245877"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="fTX-Nq-9IB">
+        <scene sceneID="gib-vX-ssJ">
             <objects>
-                <tabBarController id="3IF-fB-Lfb" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="x6s-Jj-eiO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="xmi-4M-cY8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mYh-XK-vbj">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="fTS-qv-Cj6" kind="relationship" relationship="viewControllers" id="eVW-uN-OcS"/>
-                        <segue destination="inb-aY-ng8" kind="relationship" relationship="viewControllers" id="hUz-iq-NC3"/>
-                        <segue destination="m2e-zQ-Ieh" kind="relationship" relationship="viewControllers" id="SqC-VP-39G"/>
+                        <segue destination="CpE-XO-o8l" kind="relationship" relationship="viewControllers" id="ETK-kf-SzG"/>
+                        <segue destination="byS-1b-LPT" kind="relationship" relationship="viewControllers" id="FzR-tc-Rpi"/>
+                        <segue destination="acJ-uo-ywJ" kind="relationship" relationship="viewControllers" id="rF2-kX-E6A"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pCG-Kv-DSN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M5u-BI-885" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-161" y="55"/>
+            <point key="canvasLocation" x="-910" y="345"/>
         </scene>
     </scenes>
 </document>
